--- a/tiaozao/Info.plist
+++ b/tiaozao/Info.plist
@@ -24,6 +24,25 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MOBAppKey</key>
+	<string>2010f495cf5da</string>
+	<key>MOBAppSecret</key>
+	<string>01939c1faa09ed283d89563908c391ea</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>tiaozao</string>
+	<key>NSContactsUsageDescription</key>
+	<string>开启通讯录好友</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>tiaozao</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pacifico.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -38,9 +57,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>tiaozao</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>tiaozao</string>
 </dict>
 </plist>
